--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,8 @@
         "psr-4": {
             "DoctrineAnnotations\\": "src/DoctrineAnnotations"
         }
+    },
+    "require-dev": {
+        "phpstan/phpstan": "^0.8.0"
     }
 }
