--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,10 @@
         }
     },
     "require-dev": {
-        "phpstan/phpstan": "^0.8.0"
+        "phpstan/phpstan": "^0.8.0",
+        "jakub-onderka/php-parallel-lint": "^0.9.2",
+        "jakub-onderka/php-console-highlighter": "^0.3.2",
+        "slevomat/coding-standard": "^3.0",
+        "consistence/coding-standard": "^2.0"
     }
 }
