--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         }
     ],
     "require": {
+        "php": "^7.0",
         "squizlabs/php_codesniffer": "^3.0",
         "doctrine/annotations": "^1.4",
         "doctrine/orm": "^2.5"
